package com.dixitpatel.dchatdemo.feature_chat.data.consts

const val HTTP_REQUEST_TIMEOUT = 30L
const val UNSECURED_OKHTTP_CLIENT = "unSecuredOkHttpClient"
const val SECURED_OKHTTP_CLIENT = "SecuredOkHttpClient"
const val CACHE_SIZE = 1024 * 1024 * 10L // 10 MB


// User Entries
const val SARA_USER_ID = "sara_user"
const val SARA_USERNAME = "Sara"
const val ALEX_USER_ID = "alex_user"
const val ALEX_USERNAME = "Alex"